--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,8 @@
+<nz-page-header
+class="site-page-header"
+nzTitle="S'identifier"
+>
+</nz-page-header> 
 <div class="login-div">
     <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
         <nz-form-item>
