--- a/src/app/create-pharmacien/create-pharmacien.component.html
+++ b/src/app/create-pharmacien/create-pharmacien.component.html
@@ -3,13 +3,14 @@ class="site-page-header"
 nzTitle="Créer votre compte"
 >
 </nz-page-header> 
+
 <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm()">
     <nz-form-item>
         <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="firstname" nzRequired>
           <span>Nom</span>
         </nz-form-label>
         <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Veuillez saisir votre Nom!">
-          <input nz-input id="firstname" formControlName="firstname" />
+          <input nz-input id="firstname" formControlName="firstname" [(ngModel)] = "pharmacien.nom"/>
         </nz-form-control>
     </nz-form-item>
 
@@ -18,7 +19,7 @@ nzTitle="Créer votre compte"
           <span>Prénom</span>
         </nz-form-label>
         <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Veuillez saisir votre Prénom!">
-          <input nz-input id="lastname" formControlName="lastname" />
+          <input nz-input id="lastname" formControlName="lastname" [(ngModel)] = "pharmacien.prenom"/>
         </nz-form-control>
     </nz-form-item>
 
@@ -33,14 +34,14 @@ nzTitle="Créer votre compte"
           <span>Nom d'utilisateur</span>
         </nz-form-label>
         <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="Veuillez saisir votre Nom d'utilisateur!">
-          <input nz-input id="nickname" formControlName="nickname" />
+          <input nz-input id="nickname" formControlName="nickname" [(ngModel)] = "pharmacien.nom_utilisateur"/>
         </nz-form-control>
       </nz-form-item>
 
     <nz-form-item>
       <nz-form-label [nzSm]="6" [nzXs]="24" nzRequired nzFor="email">E-mail</nz-form-label>
       <nz-form-control [nzSm]="14" [nzXs]="24" nzErrorTip="L'entrée n'est pas valide E-mail !">
-        <input nz-input formControlName="email" id="email" />
+        <input nz-input formControlName="email" id="email" [(ngModel)] = "pharmacien.email"/>
       </nz-form-control>
     </nz-form-item>
 
@@ -58,7 +59,7 @@ nzTitle="Créer votre compte"
                 <nz-option nzLabel="+212" nzValue="+212"></nz-option>
               </nz-select>
             </ng-template>
-            <input formControlName="phoneNumber" id="'phoneNumber'" nz-input />
+            <input formControlName="phoneNumber" id="'phoneNumber'" nz-input [(ngModel)] = "pharmacien.telephone"/>
           </nz-input-group>
         </nz-form-control>
     </nz-form-item>
@@ -72,6 +73,7 @@ nzTitle="Créer votre compte"
           id="password"
           formControlName="password"
           (ngModelChange)="updateConfirmValidator()"
+          [(ngModel)] = "pharmacien.password"
         />
       </nz-form-control>
     </nz-form-item>
