--- a/src/app/produit-list/produit-list.component.html
+++ b/src/app/produit-list/produit-list.component.html
@@ -26,20 +26,22 @@
       <td>{{ produit.dci }}</td>
       <td>{{ produit.ppv }} Dh</td>
       <td><button nz-button nzType="primary" (click)="showModal()"><i nz-icon nzType="plus"></i>Réserver</button></td>
+    
+      <nz-modal [(nzVisible)]="isVisible" nzTitle="Détails" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
+        <ng-container *nzModalContent>
+          <p>Code: {{ produit.code }}</p>
+          <p>Nom: {{ produit.nom }}</p>
+          <p>{{ produit.presentation }}</p>
+          <p>Dosage: {{ produit.dosage }} {{ produit.unite_dosage }}</p>
+          <p>Form: {{ produit.form }}</p>
+          <p>Princips ou Générique: {{ produit.princips_generique }}</p>
+          <p>Prix public de Vente (PPV) : {{ produit.ppv }} Dh</p>
+          <p>Prix Hôpital (PH): {{ produit.ph }} Dh</p>
+        </ng-container>
+      </nz-modal>    
     </tr>
   </tbody> 
 </nz-table>
 
     
-    <nz-modal *ngFor="let produit of produits" [(nzVisible)]="isVisible" nzTitle="Détails" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
-      <ng-container *nzModalContent>
-        <p>Code: {{ produit.code }}</p>
-        <p>Nom: {{ produit.nom }}</p>
-        <p>{{ produit.presentation }}</p>
-        <p>Dosage: {{ produit.dosage }} {{ produit.unite_dosage }}</p>
-        <p>Form: {{ produit.form }}</p>
-        <p>Princips ou Générique: {{ produit.princips_generique }}</p>
-        <p>Prix public de Vente (PPV) : {{ produit.ppv }} Dh</p>
-        <p>Prix Hôpital (PH): {{ produit.ph }} Dh</p>
-      </ng-container>
-    </nz-modal>
+    
