--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -3,44 +3,81 @@
 
   <div class="gutter-example">
     <div nz-row [nzGutter]="[16, 16]">
-      <div nz-col class="gutter-row" [nzSpan]="24">
+      <div nz-col class="gutter-row" [nzSpan]="16">
             <div class="grid-config">
+                <highcharts-chart [Highcharts]="Highcharts" [options]="salesperday"></highcharts-chart> 
             </div>
       </div>
-
-      <div nz-col class="gutter-row" [nzSpan]="6">
-            <div class="grid-config">Column</div>
-      </div>
-      <div nz-col class="gutter-row" [nzSpan]="6">
-            <div class="grid-config">Column</div>
-      </div>
-      <div nz-col class="gutter-row" [nzSpan]="6">
-            <div class="grid-config">Column</div>
-      </div>
-      <div nz-col class="gutter-row" [nzSpan]="6">
-            <div class="grid-config">Column</div>
-      </div>
-
-      <div nz-col class="gutter-row" [nzSpan]="12">
+      <div nz-col class="gutter-row" [nzSpan]="8">
         <div class="grid-config">
-            <nz-card nzTitle="Card title" [nzExtra]="extraTemplate">
-                <p>Card content</p>
-                <p>Card content</p>
-                <p>Card content</p>
-              </nz-card>
-              <ng-template #extraTemplate>
-                <a>Voire plus</a>
-              </ng-template>
+            <nz-avatar-group>
+                <nz-avatar [nzSize]=60 nzGape=4 nzShape="square" nzText="64" class="taskstodo"></nz-avatar>  
+                <a><h4 nzType="danger" nz-typography class="typoh5">tâches à faire</h4></a>
+            </nz-avatar-group>
+        </div>
+        <div class="grid-config">
+            <nz-avatar-group>
+                <nz-avatar [nzSize]=60 nzGape=4 nzShape="square" nzText="14" class="orderstodo"></nz-avatar>  
+                <a><h4 nzType="warning" nz-typography class="typoh5">Commandes non terminée</h4></a>
+            </nz-avatar-group>
+        </div>
+        <div class="grid-config">
+            <nz-avatar-group>
+                <nz-avatar [nzSize]=60 nzGape=4 nzShape="square" nzText="64" class="currentorders"></nz-avatar>  
+                <a><h4 style="color: #3f87f5;" nz-typography class="typoh5">Commandes en cours</h4></a>
+            </nz-avatar-group>
+        </div>
+        <div class="grid-config">
+            <nz-avatar-group>
+                <nz-avatar [nzSize]=60 nzGape=4 nzShape="square" nzText="134" class="completedorders"></nz-avatar>  
+                <a><h4 nzType="success" nz-typography class="typoh5">Commandes terminées</h4></a>
+            </nz-avatar-group>
+        </div>
+        <div class="grid-config">
+            <nz-avatar-group>
+                <nz-avatar [nzSize]=60 nzGape=4 nzShape="square" nzText="64"></nz-avatar>  
+                <a><h4 nz-typography class="typoh5">Commandes annulés</h4></a>
+            </nz-avatar-group>
         </div>
       </div>
-      <div nz-col class="gutter-row" [nzSpan]="12">
-        <div class="grid-config">Column</div>
+
+      <div nz-col class="gutter-row" [nzSpan]="8">
+        <div class="grid-config">
+            <nz-card nzTitle="Stock" [nzExtra]="extraTemplate">
+                <nz-badge nzDot ><a>APURONE</a></nz-badge> <br>
+                <nz-badge nzDot [nzCount]="5"><a>METHOTREXATE BIODIM</a></nz-badge><br>
+                <nz-badge nzDot [nzCount]="5"><a>ERYTHROCINE</a></nz-badge>
+                   
+            </nz-card>
+            <ng-template #extraTemplate>
+               <a>Voire plus</a>
+            </ng-template>
+        </div>
+
+
+        <div class="grid-config">
+                    <ul nz-list [nzDataSource]="data" nzBordered nzSize="large">
+                        <nz-list-header>Membres de l'équipe</nz-list-header>
+                        <li nz-list-item *ngFor="let item of data" nzNoFlex>
+                        <ul nz-list-item-actions>
+                            <nz-list-item-action>
+                             <nz-avatar nzIcon="user" style="background-color:#87d068;" (click)="msg.info('edit')"></nz-avatar>    
+                        </nz-list-item-action>
+                        </ul>
+                        {{ item }}
+                        </li>
+                  </ul>
+        </div>
       </div>
-      <div nz-col class="gutter-row" [nzSpan]="12">
-        <div class="grid-config">Column</div>
+
+
+      <div nz-col class="gutter-row" [nzSpan]="16">
+        <div class="grid-config">
+            <highcharts-chart [Highcharts]="Highcharts" [options]="bestsales"></highcharts-chart> 
+        </div>
       </div>
-      <div nz-col class="gutter-row" [nzSpan]="12">
-        <div class="grid-config">Column</div>
-      </div>
+
+     
+      
     </div>
   </div>
