--- a/src/app/pharmacien-list/pharmacien-list.component.html
+++ b/src/app/pharmacien-list/pharmacien-list.component.html
@@ -1,1 +1,48 @@
-<p>pharmacien-list works!</p>
+<nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
+    <input type="text" [(ngModel)]="nom" nz-input placeholder="Chercher une pharmacie" />
+  </nz-input-group>
+  <ng-template #suffixIconButton>
+    <button nz-button nzType="primary" nzSearch (click)="search()"><i nz-icon nzType="search"></i></button>
+  </ng-template><br />
+  <br />
+  
+<nz-table #nzTable [nzData]="pharmaciens" [nzScroll]="{ y: '500px' }">
+    <thead>
+     <tr>
+         <th>Nom</th>
+         <th>Prénom</th>
+         <th>Nom d'utilisateur</th>
+         <th>Tèl.</th>
+         <th>Email</th>
+         <th>Voire plus</th>
+     </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let pharmacien of pharmaciens">
+            <td>{{ pharmacien.nom }}</td>
+            <td>{{ pharmacien.prenom }}</td>
+            <td>{{ pharmacien.nom_utilisateur }}</td>
+            <td>+212 {{ pharmacien.telephone}}</td>
+            <td>{{ pharmacien.email }}</td>
+            <td>
+                <button nz-button nzGhost nzType="default" nzShape="circle" (click) = "pharmacienDetails(pharmacien.id)"><i nz-icon nzType="eye" nzTheme="twotone"></i></button>
+                <button nz-button nzType="default" nzShape="circle" (click) = "updatePharmacien(pharmacien.id)" style="margin-left: 10px"><i nz-icon nzType="setting" nzTheme="twotone"></i></button>
+                <button
+                
+                nz-button
+                nzDanger
+                nzShape="circle"
+                style="margin-left: 10px"
+                    nz-popconfirm
+                    nzPopconfirmTitle="Êtes-vous sûr de supprimer ce pharmacien ?"
+                    nzPopconfirmPlacement="bottom"
+                    (nzOnConfirm)="confirm(pharmacien.id)"
+                    (nzOnCancel)="cancel()"
+                    >
+                    <i nz-icon nzType="delete" nzTheme="fill"></i>
+                </button>
+            </td>
+        </tr>
+    </tbody>
+
+</nz-table>
