--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -50,7 +50,7 @@
                    
             </nz-card>
             <ng-template #extraTemplate>
-               <a>Voire plus</a>
+               <a  routerLink="/stock">Voire plus</a>
             </ng-template>
         </div>
 
