--- a/src/app/create-pharmacie/create-pharmacie.component.html
+++ b/src/app/create-pharmacie/create-pharmacie.component.html
@@ -5,41 +5,6 @@ nzBackIcon
 nzTitle="Créer votre Pharmacie"
 >
 </nz-page-header> 
-   
-
-<!--     
-        <div class="form-group">
-            <label>ICE</label>
-            <input type="text" class ="form-control" id = "ice"
-                [(ngModel)] = "pharmacie.ice" name = "ice">
-        </div>
-    
-        <div class="form-group">
-            <label>Libelle</label>
-            <input type="text" class ="form-control" id = "libelle"
-                [(ngModel)] = "pharmacie.libelle" name = "libelle">
-        </div>
-    
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" class ="form-control" id = "email"
-                [(ngModel)] = "pharmacie.email" name = "email">
-        </div>
-    
-        <div class="form-group">
-            <label>Tel.</label>
-            <input type="text" class ="form-control" id = "telephone"
-                [(ngModel)] = "pharmacie.telephone" name = "telephone">
-        </div>
-    
-        <div class="form-group">
-            <label>Adresse</label>
-            <input type="text" class ="form-control" id = "adresse"
-                [(ngModel)] = "pharmacie.adresse" name = "adresse">
-        </div> -->
-    
-        
-    
  
          
 <form nz-form (ngSubmit)="submitForm()">          
@@ -84,6 +49,14 @@ nzTitle="Créer votre Pharmacie"
             <input nz-input id = "ville" [(ngModel)] = "pharmacie.ville" name = "ville">
         </nz-form-control>
     </nz-form-item>
+
+    <nz-form-item> 
+        <nz-form-label [nzSpan]="2">Ville</nz-form-label>
+        <nz-form-control nzHasFeedback [nzSpan]="22" nzErrorTip="">
+            <input nz-input id = "ville" [(ngModel)] = "pharmacie.ville" name = "ville">
+        </nz-form-control>
+    </nz-form-item>
+    
     <nz-form-item>
         <nz-form-control [nzOffset]="18" [nzSpan]="6">
             <button nz-button nzType="primary" nzBlock >Créer</button>
